--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="cv_ava">
-          <img src="imgs/avatar.jpg" alt="Dương Khánh Uyên">
+          <!-- <img src="imgs/avatar.jpg" alt="Dương Khánh Uyên"> -->
         </div>
       </div>
       <div class="cv_cont">
