--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="myscripts.js"></script>
     <title>Hoàng Minh Trí - Back-end Developer</title>
   </head>
   <body>
     <div class="wrap">
       <div class="header">
+        <button type="button " onclick="myFunction()" class="classBTN">Export PDF</button>
         <div class="cv_intro">
           <h1 class="cv_name">Hoàng Minh Trí</h1>
           <p cv_subtit><strong>3 years total</strong> in Back-end Developer</p>
@@ -303,18 +305,3 @@
     </div>
   </body>
 </html>
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-test/index.html at master · dku124/test
