--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               </div>
               <div class="list_skill">
                 <div class="sublist">
-                  <p>Database: MySQL, SQL , SQL Server , Oracle</p>
-                  <p>Programming Languages:Java 8, PHP, C++, C#, Javascript, HTML, Css</p>
-                  <p>Framework:Jsp/servlet, Luman, Laravel, APS.Net</p>
+                  <p>Database: MySQL, SQL , SQL Server , Oracle , MongoDB</p>
+                  <p>Programming Languages:Java 8, PHP, C++, C#, Javascript, HTML, Css, Python</p>
+                  <p>Framework:Spring,Jsp/servlet, Luman, Laravel, APS.Net</p>
                   <p>Git</p>
                 </div>
                 <div class="sublist">
@@ -154,7 +154,13 @@
                     <p class="cont_txt"><span class="txt-b">Description: </span> Vp Bank's Project</p>
                     <p class="cont_txt"><span class="txt-b">Teamsize: </span> 35</p>
                     <p class="cont_txt"><span class="txt-b">Position: </span> Back-end Developer</p>
-                    <p class="cont_txt"><span class="txt-b">Technologies used: </span> C# , java , Oracle , sql server</p>
+                    <p class="cont_txt"><span class="txt-b">Technologies used: </span> C# , java , Oracle , sql server , mongo DB</p>
+                    <div class="sublist">
+                      <p>Build back-end for web</p>
+                      <p>Write functions and stored procedures</p>
+                      <p>Read/Analyze the query execution plan and Optimize queries</p>
+                      <p>Handle the flow of documents to the accounts decentralization in the system</p>
+                    </div>
                   </div>
                 </li>
                 <li>
