--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="cv_intro">
           <h1 class="cv_name">Hoàng Minh Trí</h1>
           <p cv_subtit><strong>5 years total</strong> in Back-end Developer</p>
-         <!--   <div class="cv_contact">
+           <div class="cv_contact">
             <strong class="contact_title">Contact: 0342.182.183 | minhttrihoang97@gmail.com | Ha Noi</strong>
-          </div>-->
+          </div>
         </div>
         <div class="cv_ava">
        <!--   <img src="imgs/avatar.jpg" alt="Hoang Minh Tri">  -->
